# serde_gvas

./: .gitignore  Cargo.toml  LICENSE  fullsave.sav
examples/: read_header.rs  read_known_file.rs
src/: error.rs  lib.rs  macros.rs  serde_gvas.rs  serde_gvas_header.rs  types.rs
src/header/: de.rs  ser.rs
tests/: test.rs
