[package]
name = "serde_gvas"
version = "0.1.0"
edition = "2021"
authors = ["localcc <localcmail@gmail.com>"]

[lib]
name = "serde_gvas"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.130", features = ["derive"]}